# rs-xsd-parser

./: .nvim-dap.lua  Cargo.toml  README.md
rs-xsd-parser/: Cargo.toml  README.md  expand.rs  test.xml
rs-xsd-parser-derive/: Cargo.toml
rs-xsd-parser-derive/src/: lib.rs
rs-xsd-parser/src/: lib.rs
rs-xsd-parser/src/flatten/: attribute.rs  datamodel_map.rs  mod.rs  types.rs
rs-xsd-parser/src/xsd/: annotation.rs  any.rs  atomic_type.rs  attribute.rs  common_type.rs  content.rs  element.rs  group.rs  import.rs  max_occurences.rs  mod.rs  schema.rs  sequence.rs  type_def.rs  types.rs
rs-xsd-parser/utils/: atomic_types.sh
src/: lib.rs  main.rs
src/flatten/: datamodel_map.rs  mod.rs  types.rs
src/xsd/: annotation.rs  any.rs  any_attribute.rs  attribute.rs  attribute_group.rs  complex_content.rs  complex_type.rs  content.rs  default_fn.rs  element.rs  extension.rs  group.rs  import.rs  list.rs  max_occurences.rs  mod.rs  open_content.rs  qualification.rs  restriction.rs  rust_types_mapping.rs  schema.rs  sequence.rs  simple_content.rs  simple_type.rs  type_def.rs  types.rs  union.rs
