[package]
name = "rs-xsd-parser"
version = "0.1.0"
edition = "2021"
authors = ["Mingyi Li<lessu@163.com>"]

[dependencies]
log = "0.4"
xml-rs = "0.8"
yaserde = { git = "https://github.com/media-io/yaserde.git", rev = "refs/pull/193/head" ,version = "0.11", features = ["yaserde_derive"] }
clap = { version = "4.0", features = ["derive"] }